--- a/src/components/AllResults/TableRow/style.scss
+++ b/src/components/AllResults/TableRow/style.scss
@@ -17,7 +17,7 @@ $chevronSize: 0.5rem;
     button {
       cursor: pointer;
       border: 0;
-      border-radius: $ParcelValuesBorderRadius;
+      border-radius: $borderRadiusParcelValues;
       background-color: #03aa5b;
       font-size: 0.8rem;
       font-weight: 500;
