--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -7,7 +7,7 @@
     text-align: center;
     font-size: 2.8rem;
     padding: 1rem;
-    @each $number, $color in $LogoColours {
+    @each $number, $color in $coloursLogo {
       span:nth-child(#{$number}) {
         font-weight: 800;
         font-family: $font-Lexend;
